--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "node env-config.js && dotenv -e .env.local -- next dev",
+    "build": "node env-config.js && dotenv -e .env.local -- next build",
+    "start": "node env-config.js && dotenv -e .env.local --next start",
     "lint": "next lint"
   },
   "dependencies": {
@@ -41,6 +41,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "dotenv-cli": "^7.4.2",
+    "dotenv-expand": "^11.0.6",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
